--- a/_posts/2016-11-09-script.md
+++ b/_posts/2016-11-09-script.md
@@ -12,6 +12,7 @@ comments: true
 ## Linux 脚本
 **Linux日志分析脚本, 用来熟练shell语法**
 
+
 ```
 
 #!/bin/sh
@@ -46,3 +47,15 @@ for i in `ls $1`
 exit 0
 
 ```
+
+* awk if判断字符串包含
+
+~~~ shell
+cat $1 | grep 'com.fantasia.crawler.filter.CountFilter.doFilter(30)' | awk '{print $7}' | awk -F '/' '{if ($6=="review" && $7~/amazon/) {print $7; } else if ($6=="review") {print $7 " " $8;} }' | sort | uniq
+~~~
+
+* awk if判断正则表达式
+
+~~~ shell
+awk '{if($0!~/info/ && $0~/[a~z]/){print $0;}}'
+~~~
