--- a/_posts/life/2016-11-14-crawler.md
+++ b/_posts/life/2016-11-14-crawler.md
@@ -9,5 +9,5 @@ life: true
 comments: true
 ---
 
-**准备做一个抓取每日证券涨跌情况，然后根据每日涨跌，瞬时涨跌，近一周波动情况进行排名的系统<br/>**
-**然后根据这些分析我也入市粉红啦！！！**
+**准备做一个抓取每日证券涨跌情况，然后根据每日涨跌，瞬时涨跌，近一周波动情况进行排名的系统。<br/>**
+**然后根据这些分析我也入市分红啦！！！**
