--- a/_posts/life/2017-01-01-new-year.md
+++ b/_posts/life/2017-01-01-new-year.md
@@ -2,7 +2,7 @@
 layout: post
 title: "新年快乐"
 date: 2017-01-01
-excerpt: "自己在家做的周末午餐"
+excerpt: "2017元旦快乐！新年快乐！"
 tags: [newyear]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
@@ -11,4 +11,5 @@ comments: false
 <figure>
 	<a href="{{ site.url }}/assets/img/new.jpg"><img src="{{ site.url }}/assets/img/new.jpg"></a>
 </figure>
+
 #### 2017元旦快乐！
