--- a/_posts/life/2017-01-05-wumai.md
+++ b/_posts/life/2017-01-05-wumai.md
@@ -9,7 +9,7 @@ life: true
 comments: true
 ---
 ### 写在前面的话
-国家领导人曾经说过，党政内部确实存在着被各种诱惑腐化，有背党的思想的同志。但总的大流仍然是好的，是纯洁的，是能够挑起大梁的。
+国家领导人曾经说过，党政内部确实存在着被各种诱惑腐化，有背党的思想的同志。但总的大流仍然是好的，是纯洁的，是能够挑起大梁的。这一点我们坚信不疑。
 
 ### 从雾霾看世界
 中学政治考试有过这样的一道论述题，题干是```欧洲的经济发展起来是建立在环境破坏之上的，他们走的是先污染后治理的路。又举例英国伦敦，英国因为肆意燃烧煤炭，使得伦敦有'雾都'之称，环境污染严重```，让我们论述```在党的领导下，我们为什么不会走上欧洲先发展后治理的老路```。
