--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -8,8 +8,6 @@ tag:
 - Alibaba
 comments: true
 ---
-<figure>
-<object   classid="clsid:CA8A9780-280D-11CF-A24D-444553540000"   width="760"   height="411"   border="0">             
+<object   classid="clsid:CA8A9780-280D-11CF-A24D-444553540000"    border="0">             
               <param   name="SRC"   value="{{ site.url }}/assets/Java.pdf">     
 </object>
-</figure>
