--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -8,8 +8,6 @@ tag:
 - Alibaba
 comments: true
 ---
-<object   classid="clsid:CA8A9780-280D-11CF-A24D-444553540000"    border="0">             
-              <param   name="SRC"   value="{{ site.url }}/assets/Java.pdf">     
-</object>
+### 阿里巴巴技术部Java代码规范
 
-<object width="800" height="600" data="http:{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="http:{{ site.url }}/assets/Java.pdf"> </object>
+<object width="800" height="600" data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
