--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "阿里巴巴java规范"
+title:  "阿里巴巴Java规范"
 date:   2017-01-11
-excerpt: "阿里巴巴java规范"
+excerpt: "阿里巴巴Java规范"
 tag:
 - java
 - Alibaba
