--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -10,4 +10,4 @@ comments: true
 ---
 ### 阿里巴巴技术部Java代码规范
 
-<object width="800" height="600" data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
+<object data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
