--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -6,8 +6,9 @@ excerpt: "阿里巴巴Java规范"
 tag:
 - java
 - Alibaba
+- 阿里巴巴
 comments: true
 ---
 ### 阿里巴巴技术部Java代码规范
 
-<object data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
+<object width="800" height="600" data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
