--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -11,4 +11,4 @@ comments: true
 ---
 ### 阿里巴巴技术部Java代码规范
 
-<object width="800" height="600" data="{{ site.url }}/assets/Java.pdf" type="application/pdf"> <param name="src" value="{{ site.url }}/assets/Java.pdf"> </object>
+<object width="800" height="600" data="//ojt8gkzcy.bkt.clouddn.com/article/pdf/Java.pdf" type="application/pdf"> <param name="src" value="//ojt8gkzcy.bkt.clouddn.com/article/pdf/Java.pdf"> </object>
