--- a/_posts/post/2017-01-23-volatile.md
+++ b/_posts/post/2017-01-23-volatile.md
@@ -14,7 +14,7 @@ comments: true
 被volatile修饰的属性，在修改属性的值的时候，会增加一个内存屏障，将包括该属性在内的前面所有修改的属性刷新CPU缓存，做到属性的变化对其他线程可见。
 
 ### volatile关键字的用处
-保证属性的安全，即属性的任何变化都能够做到对其他线程可见.
+保证属性的安全，即属性的任何变化都能够做到即使对其他线程可见.
 
 ### volatile不等同于线程安全
 由于一个线程会将临界变量的值压入线程栈，类似在线程栈中对临界属性做了备份，所以即使临界属性时时保证为最新的值，但无法更改线程栈中的备份，所以也就无法做到线程安全。
