--- a/_posts/post/2017-01-23-volatile.md
+++ b/_posts/post/2017-01-23-volatile.md
@@ -19,7 +19,8 @@ comments: true
 ### volatile不等同于线程安全
 由于一个线程会将临界变量的值压入线程栈，类似在线程栈中对临界属性做了备份，所以即使临界属性时时保证为最新的值，但无法更改线程栈中的备份，所以也就无法做到线程安全。
 
-下面来看一个具体示例：
+下面来看一个具体示例
+
 __java源码:__
 {% highlight java %}
 {% raw %}
