--- a/_posts/post/2017-01-25-RBAC.md
+++ b/_posts/post/2017-01-25-RBAC.md
@@ -31,14 +31,15 @@ comments: true
 
 ### eCommerce-RBAC
 * 地址
-  * https://github.com/rcosnita/eCommerce-RBAC
+  * [https://github.com/rcosnita/eCommerce-RBAC](https://github.com/rcosnita/eCommerce-RBAC)
 *  特点
   * 简单实现了RBAC3特性
   * 数据结构清晰,见下方ER图![rbac-erd](http://ojt8gkzcy.bkt.clouddn.com/image/png/rbac-erd.png)
 
   * 采用HTTP API，各个模块API功能比较单一且功能比较全面
-  ```
-  @Path("/")
+  {% highlight java %}
+  {% raw %}
+@Path("/")
 @Produces(MediaType.APPLICATION_JSON)
 @Consumes(MediaType.APPLICATION_JSON)
 public interface RbacUsersManager {
@@ -158,7 +159,9 @@ public interface RbacUsersManager {
 	@DELETE
 	public void deleteUserSessions(@PathParam("userId") Integer userId);
 }
-  ```
+{% endraw %}
+{% endhighlight %}
+
 * 不够完善的地方
   * 没有完善的鉴权机制以及鉴权方案
   * 仅有权限管理方案，没有权限分类方案。
