cdn域名配置话

--- a/_posts/life/2016-11-10-bike.md
+++ b/_posts/life/2016-11-10-bike.md
@@ -9,7 +9,7 @@ life: true
 comments: true
 ---
 <figure>
-	<a href="//ojt8gkzcy.bkt.clouddn.com/image/jpg/bike.jpg"><img src="//ojt8gkzcy.bkt.clouddn.com/image/jpg/bike.jpg"></a>
+	<a href="{{ site.staticUrl }}/image/jpg/bike.jpg"><img src="{{ site.staticUrl }}/image/jpg/bike.jpg"></a>
 </figure>
 **昨天骑着我的电动车回家，为了躲避一个行人，摔了一跤<br/>
 先是看着自己直接飞过了电动车，然后啪的一下摔倒地上，摔得四仰八叉。**
