--- a/_posts/life/2016-12-22-food.md
+++ b/_posts/life/2016-12-22-food.md
@@ -9,7 +9,7 @@ life: true
 comments: true
 ---
 <figure>
-	<a href="//ojt8gkzcy.bkt.clouddn.com/image/jpg/fish.jpg"><img src="//ojt8gkzcy.bkt.clouddn.com/image/jpg/fish.jpg"></a>
-	<a href="//ojt8gkzcy.bkt.clouddn.com/image/jpg/jews-ear.jpg"><img src="//ojt8gkzcy.bkt.clouddn.com/image/jpg/jews-ear.jpg"></a>
+	<a href="{{ site.staticUrl }}/image/jpg/fish.jpg"><img src="{{ site.staticUrl }}/image/jpg/fish.jpg"></a>
+	<a href="{{ site.staticUrl }}/image/jpg/jews-ear.jpg"><img src="{{ site.staticUrl }}/image/jpg/jews-ear.jpg"></a>
 </figure>
 **周末自己在家做的中饭，鱼和木耳炒蛋。味道还是不错的，欢迎大家来做客。**
