--- a/_posts/post/2017-01-24-https.md
+++ b/_posts/post/2017-01-24-https.md
@@ -13,7 +13,7 @@ comments: true
 ### HTTPS简介
 HTTPS其实是有两部分组成：HTTP + SSL / TLS，也就是在HTTP上又加了一层处理加密信息的模块。服务端和客户端的信息传输都会通过TLS进行加密，所以传输的数据都是加密后的数据。具体是如何进行加密，解密，验证的，且看下图。
 
-![https](http://ojt8gkzcy.bkt.clouddn.com/image/png/https.png)
+![https](http:{{ site.staticUrl }}/image/png/https.png)
 #### 1. 客户端发起HTTPS请求
 这个没什么好说的，就是用户在浏览器里输入一个https网址，然后连接到server的443端口。
 
