--- a/_posts/post/2017-01-25-RBAC.md
+++ b/_posts/post/2017-01-25-RBAC.md
@@ -34,7 +34,7 @@ comments: true
   * [https://github.com/rcosnita/eCommerce-RBAC](https://github.com/rcosnita/eCommerce-RBAC)
 *  特点
   * 简单实现了RBAC3特性
-  * 数据结构清晰,见下方ER图![rbac-erd](http://ojt8gkzcy.bkt.clouddn.com/image/png/rbac-erd.png)
+  * 数据结构清晰,见下方ER图![rbac-erd](http:{{ site.staticUrl }}/image/png/rbac-erd.png)
 
   * 采用HTTP API，各个模块API功能比较单一且功能比较全面
   {% highlight java %}
