--- a/_posts/life/2017-01-26-newyear.md
+++ b/_posts/life/2017-01-26-newyear.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "2017农历新年"
+title: "2017农历新年！新年快乐！"
 date: 2017-01-26
 excerpt: "2017农历新年！新年快乐！"
 tags: [happy new year]
@@ -13,4 +13,5 @@ comments: false
 </figure>
 
 #### 祝我鸡年：大名鼎鼎！大吉大利！大红大紫！大显身手！大炮而红！大鸣惊人！大马当先！
+
 #### 祝我鸡年：新春快乐！万事大吉！合家欢乐！财源广进！吉祥如意！花开富贵！金玉满堂！福禄寿禧！健康吉祥！恭喜发财！
