--- a/_posts/life/2017-01-26-newyear.md
+++ b/_posts/life/2017-01-26-newyear.md
@@ -12,6 +12,6 @@ comments: false
 	<a href="{{ site.staticUrl }}/image/jpg/newyear.jpg"><img src="{{ site.staticUrl }}/image/jpg/newyear.jpg"></a>
 </figure>
 
-#### 祝我鸡年：大名鼎鼎！大吉大利！大红大紫！大显身手！大炮而红！大鸣惊人！大马当先！
+#### 祝我和我的家人朋友鸡年：大名鼎鼎！大吉大利！大红大紫！大显身手！大炮而红！大鸣惊人！大马当先！
 
-#### 祝我鸡年：新春快乐！万事大吉！合家欢乐！财源广进！吉祥如意！花开富贵！金玉满堂！福禄寿禧！健康吉祥！恭喜发财！
+#### 祝我和我的家人朋友鸡年：新春快乐！万事大吉！合家欢乐！财源广进！吉祥如意！花开富贵！金玉满堂！福禄寿禧！健康吉祥！恭喜发财！
