--- a/_posts/life/2017-01-26-newyear.md
+++ b/_posts/life/2017-01-26-newyear.md
@@ -14,4 +14,4 @@ comments: false
 
 __祝我和我的家人朋友鸡年：大名鼎鼎！大吉大利！大红大紫！大显身手！大炮而红！大鸣惊人！大马当先！__
 
-__祝我和我的家人朋友鸡年：万事大吉！合家欢乐！财源广进！吉祥如意！花开富贵！金玉满堂！福禄寿禧！健康吉祥！恭喜发财！__
+__祝我和我的家人朋友鸡年：万事大吉！合家欢乐！财源广进！吉祥如意！花开富贵！福禄寿禧！健康吉祥！恭喜发财！__
