--- a/_posts/life/2017-01-26-newyear.md
+++ b/_posts/life/2017-01-26-newyear.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "2017农历新年！新年快乐！"
+title: "2017农历丁酉年！新年快乐！"
 date: 2017-01-26
-excerpt: "2017农历新年！新年快乐！"
+excerpt: "2017农历丁酉年！新年快乐！"
 tags: [happy new year]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
