设计模式一

--- a/_posts/post/2017-01-28-design.md
+++ b/_posts/post/2017-01-28-design.md
@@ -29,6 +29,7 @@ comments: true
 * 抽象类定义好一类产品的行为，实现类继承抽象类并实现具体产品的行为。
 * 抽象类定义好这一类产品的对外表象，通过组装该类产品的行为，定义行为的执行顺序来实现。
 * 直白点说就是公共方法抽出来到父类中，定义产品的表象就是公共方法。
+* 很多三方包提供的扩展方式就使用了该接口，你仅需要继承原实现类并覆盖某个protected方法，然后调用接口类型的execute方法即可。
 
 # 建造者模式
 理解：
@@ -40,4 +41,9 @@ comments: true
 
 分析/推导：
 
-* 
+* 关于产品行为的定义这块和```模版方法模式```很像，就不再赘述了。
+* 由于产品的表象不再是静态不变的，而是动态的，同一件产品可能有不同的表象，这时候定义出来一个构造者（builder），用来实际组装产品的行为执行顺序，产生不用的表象。
+* 关于director，我的理解他是```设计原则--迪米特法则```的产物。
+* ```设计原则--迪米特法则```规定需要最小依赖，即上层不应该直接builder，因为builder不应该是上层的朋友类，即上层不应该了解产品到底有多少生产线，因为builder种类可能很多，上层不需要了解产品和builder间的映射关系，而是仅需要知道他需要生产哪一类产品。
+* director就是产品和生产线builder之间的桥梁，director中封装着产品和builder间的对应关系。
+* 这样做的好处就是产品的构造对上层来说是原子性的，是透明的，上层完全不需要知道里面的具体逻辑。
