设计模式二

--- a/_posts/post/2017-01-29-design2.md
+++ b/_posts/post/2017-01-29-design2.md
@@ -42,4 +42,17 @@ comments: true
 * 缺点，中介者可能会非常臃肿，实际应用中类与类间多依赖是很正常的，不建议盲目使用中介者模式，只有当类图间的依赖关系非常繁杂时，可以增加中介者模块来使得类与类的关系变得更加清晰。
 
 # 命令模式
-理解：
+理解：简化上层模块对下层业务的感知。当完成一个业务需要调用3-4个下层模块并且需感知调用顺序的时候，可以抽出一个命令者模块，由具体的命令者来完成对下层模块的调用。
+
+分析/推导：
+
+* 客户端的业务是多种多样的，每个业务都可能需要多个底层模块来完成他。
+* 上层模块不期望了解底层的相关逻辑。
+* 可以将客户端的所有业务都封装成一个个command（指令），而每个指令则由具体的一个receiver（接收者）来接收然后具体分发执行下去（receiver（接收者）可以简单预处理，但具体的指令执行仍然是由各个底层模块来完成）。
+* 举例：我们平常经常写的controller --> manager --> service可以简单理解为该设计模式。
+    * controller不需要知道底层service的相关逻辑，而是将客户端的某个业务指令进行封装，然后调用manager
+    * 一个manager则是一个指令的receiver（接收者），而manager中的一个方法则对应一个command（指令）。
+    * manager来管理具体的一个指令相关需要调用的service并执行。
+    * service则是具体的底层模块。
+* 优点：上层无需感知底层逻辑。上层和底层间增加了command的receiver（接收者），隔离了上层对底层的直接依赖，降低了耦合，底层的改动直接对receiver（接收者）负责即可，上层无需感知。
+    * 想想看，如果没有manager，service的一个改动，所有依赖这个service的controller都可能会受影响，需要把相关的单元测试都跑一遍，这是多么痛苦的。
