设计模式二

--- a/_posts/post/2017-01-29-design2.md
+++ b/_posts/post/2017-01-29-design2.md
@@ -48,7 +48,7 @@ comments: true
 
 * 客户端的业务是多种多样的，每个业务都可能需要多个底层模块来完成他。
 * 上层模块不期望了解底层的相关逻辑。
-* 可以将客户端的所有业务都封装成一个个command（指令），而每个指令则由具体的一个receiver（接收者）来接收然后具体分发执行下去（receiver（接收者）可以简单预处理，但具体的指令执行仍然是由各个底层模块来完成）。
+* 可以将客户端的所有业务都封装成一个个command（指令），而每个指令则由具体的一个receiver（接收者）来接收然后具体分发执行下去由相关的底层模块来执行（receiver（接收者）可以简单预处理，但具体的指令执行仍然是由各个底层模块来完成）。
 * 举例：我们平常经常写的controller --> manager --> service可以简单理解为该设计模式。
     * controller不需要知道底层service的相关逻辑，而是将客户端的某个业务指令进行封装，然后调用manager
     * 一个manager则是一个指令的receiver（接收者），而manager中的一个方法则对应一个command（指令）。
