设计模式二

--- a/_posts/post/2017-01-28-design.md
+++ b/_posts/post/2017-01-28-design.md
@@ -4,7 +4,10 @@ title:  "设计模式（一）"
 date:   2017-01-28
 excerpt: "设计原则：抽象工厂模式，模版方法模式，建造者模式"
 tag:
-- 设计原则
+- 设计模式
+- 抽象工厂模式
+- 模版方法模式
+- 建造者模式
 comments: true
 ---
 > 打算写几篇关于设计模式的连载，今天是开篇，关于抽象工厂模式，模版方法模式和建造者模式。
