--- a/_posts/post/2017-01-29-design2.md
+++ b/_posts/post/2017-01-29-design2.md
@@ -4,7 +4,11 @@ title:  "设计模式（二）"
 date:   2017-01-28
 excerpt: "设计原则：代理模式，原型模式，中介者模式，命令模式"
 tag:
-- 设计原则
+- 设计模式
+- 代理模式
+- 原型模式
+- 中介者模式
+- 命令模式
 comments: true
 ---
 > 今天是设计模式连载的第二篇，记录了代理模式，原型模式，中介者模式，命令模式。同样每个设计模式的详解都包括的我的理解以及我的分析推导过程。
