设计模式三

--- a/_posts/post/2017-01-29-design2.md
+++ b/_posts/post/2017-01-29-design2.md
@@ -43,6 +43,7 @@ comments: true
 * 首先看下类两两间相互依赖的类图(由于依赖关系比较负责，仅画出了A模块的依赖关系)。![类图](http:{{ site.staticUrl }}/image/png/zhongjie1.png)
 * 为了解决这种复杂的相互依赖关系，使类与类之间的关系更加清晰简洁，增加了中介者模块，实际负责类与类之间的交互，即 __A调用B改为A调用中介者,再由中介者最终调用B__。![类图](http:{{ site.staticUrl }}/image/png/zhongjie2.png)
 * 优点，简化了类与类之间的依赖关系，使得任意业务类仅与中介者耦合，业务类的改动仅需对中介者负责即可。
+    * 所有业务类的改动，仅需保证中介者测试通过即可，如果未加入中介者模块，则一个改动需要所有依赖方都需要进行测试保证没有问题。
 * 缺点，中介者可能会非常臃肿，实际应用中类与类间多依赖是很正常的，不建议盲目使用中介者模式，只有当类图间的依赖关系非常繁杂时，可以增加中介者模块来使得类与类的关系变得更加清晰。
 
 # 命令模式
