--- a/_posts/post/2017-01-30-design3.md
+++ b/_posts/post/2017-01-30-design3.md
@@ -38,5 +38,13 @@ comments: true
 * 装饰类可以动态嵌套，一般是需要你在new的时候将__代理／修饰__的核心对象传递过来即可，配合上上一条，即传递的核心对象即可以是底层模块，也可以是已经被装饰类封装之后的代理类。
 
 # 策略模式
-理解：
-* 
+理解：增加策略模块（strategy），并用上下文（context）来封装策略的具体调用。
+
+分析／推导：
+* 典型的策略模式只是定义了一个策略模块，上层将具体的某一个策略传递给context，然后context来负责策略的实际调用。
+* 按照典型的方式思考，我觉得策略模式用处不大，首先面向接口编程这是很正常的，策略也就是接口的实现。而上层照样需要感知具体的某一个策略调用，context只是接收上层确定的一个策略然后具体执行而已，所以context的意义也不大，上层完全可以在确定某一个策略之后然后再执行即可。
+* 我的改进
+    * 我认为上层可以封装一下他的request信息，包含元数据和需要，context来动态确定需要用哪一个或者哪几个策略来具体完成上层的这个需求。
+    * 这么的改动很像```命令模式```，上层封装的request就是一个command，而context就是receiver，这个command具体应该由哪一个执行者或者哪几个执行者来执行完全由context来决定。
+    * 这样的改动减少了底层对上层的侵入，上层无需感知具体有哪些策略，只要封装需求即可。符合```迪米特法则````，仅依赖朋友类型，并且依赖越少越好。
+    * 底层策略的改动无需再对上层负责，仅需保证context的调用没问题即可。
