设计模式三

--- a/_posts/post/2017-01-30-design3.md
+++ b/_posts/post/2017-01-30-design3.md
@@ -10,7 +10,7 @@ tag:
 - 策略模式
 comments: true
 ---
-> 今天是设计模式连载的第二篇，记录了责任链模式，装饰模式，策略模式。同样每个设计模式的详解都包括的我的理解以及我的分析推导过程。
+> 今天是设计模式连载的第三篇，记录了责任链模式，装饰模式，策略模式。同样每个设计模式的详解都包括的我的理解以及我的分析推导过程。
 
 # 责任链模式
 理解：
