--- a/_posts/post/2017-01-29-design2.md
+++ b/_posts/post/2017-01-29-design2.md
@@ -59,5 +59,6 @@ comments: true
     * 一个manager则是一个指令的receiver（接收者），而manager中的一个方法则对应一个command（指令）。
     * manager来管理具体的一个指令相关需要调用的service并执行。
     * service则是具体的底层模块。
+* 举例2：想想```org.springframework.web.servlet.DispatcherServlet```，他不就是接收客户端封装好的request（command），然后负责管理具体调用哪个controller吗。
 * 优点：上层无需感知底层逻辑。上层和底层间增加了command的receiver（接收者），隔离了上层对底层的直接依赖，降低了耦合，底层的改动直接对receiver（接收者）负责即可，上层无需感知。
     * 想想看，如果没有manager，service的一个改动，所有依赖这个service的controller都可能会受影响，需要把相关的单元测试都跑一遍，这是多么痛苦的。
