设计模式三

--- a/_posts/post/2017-01-30-design3.md
+++ b/_posts/post/2017-01-30-design3.md
@@ -48,5 +48,5 @@ comments: true
 * 我的改进
     * 我认为上层可以封装一下他的request信息，包含元数据和需要，context来动态确定需要用哪一个或者哪几个策略来具体完成上层的这个需求。
     * 这么的改动很像```命令模式```，上层封装的request就是一个command，而context就是receiver，这个command具体应该由哪一个执行者或者哪几个执行者来执行完全由context来决定。
-    * 这样的改动减少了底层对上层的侵入，上层无需感知具体有哪些策略，只要封装需求即可。符合```迪米特法则````，仅依赖朋友类型，并且依赖越少越好。
+    * 这样的改动减少了底层对上层的侵入，上层无需感知具体有哪些策略，只要封装需求即可。符合```迪米特法则```，仅依赖朋友类型，并且依赖越少越好。
     * 底层策略的改动无需再对上层负责，仅需保证context的调用没问题即可。
