设计模式五

--- a/_posts/post/2017-02-03-design5.md
+++ b/_posts/post/2017-02-03-design5.md
@@ -39,9 +39,18 @@ comments: true
 
 * 今天想着重讲一下的设计模式。
 * 定义一个上下文对象（context），上下文维护一个当前状态（state）。
+* context拥有不同的状态并且拥有一个初始状态，状态是context类的属性，而不是根据其他来决定的（比如方法参数）。
+* 状态的切换是由于一个状态的完结而将当前context的状态切换到另外一个状态，而不是根据比如方法参数或者其他的不用来切换的。
 * 上下文是具有状态的，状态不同行为不用。
 * 调用上下文的接口，实际根据当前状态调用对应的接口。
 
 分析/推导：
 
-* 
+* 当一个对象（初始对象）的行为由于不同的状态而不同时，可能大多数情况下我们会使用__switch···case或者if···else__来实现，即当类初始状态__A__则怎么样，处于状态__B__则怎么样。但这样往往会导致代码特别长，不易维护，当增加分支时需要修改类。
+* 其实每个__switch···case或者if···else__都对应着一种状态，我们可以实际调用这个当前状态对象与初始对象所对应的方法。
+    * 实际上初始对象是无法完成一个行为的，必须结合当前的状态。既然这样则干脆将这个行为下放到状态中来完成，初始对象的这个行为即由初始对象的当前状态来完成。
+* 每个初始对象都维护一个当前状态，所有对初始对象行为的访问都可以实际转换到当前状态对象。
+* 当然，当前状态是可以更改的，比如一个状态对象执行完成之后即可将初始对象的当前状态指向下一个状态。
+* 个人认为可能存在的误区：
+    * 状态模式并不是用来解决__if···else···__过多的问题的，因为状态定义为类的状态，每个类都拥有当前状态。而很多的条件判断都是根据方法参数或者临时变量来进行判断的。他并不拥有当前状态这一说，即程序员每次都仍需要通过变量来判断对应状态。
+    * 个人认为可以用责任链模式来解决__if···else···__过多的问题的，即将变量作为消息传递给责任链，责任链来负责流式的判断由哪个节点来处理这个消息。
