设计模式六

--- a/_posts/post/2017-02-04-design6.md
+++ b/_posts/post/2017-02-04-design6.md
@@ -30,4 +30,9 @@ comments: true
 
 分析/推导：
 
-* 
+* 外观类型依赖具体执行类型，并且外观类型的核心方法调用具体执行类型的接口。即 __公司类依赖产品类，公司的mackMoney行为调用产品的product接口和sell接口。__
+* 公司不再依赖具体的产品，一家公司可以在不同时期生产销售不同产品。
+* 可以理解为外观类型是具体执行类型的封装，封装任何实现类均可，只要是具有相同的类型即可。外观类型用来将上层的请求实际传递到执行类型来具体执行，做到实现类和外观类解耦，两边可分别横向扩展。
+    * 牵强点的理解可以是 controller调用service，service直接调用dao。
+    * controller对应上层模块，service对应外观类型，dao对应实现类型。
+    * service和dao可以分别扩展。
