--- a/_posts/life/2017-02-05-food.md
+++ b/_posts/life/2017-02-05-food.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "2017.02.05的午饭"
+title: "美食频道"
 date: 2017-02-05
-excerpt: "自己的午饭"
+excerpt: "自己做的午饭"
 tags: [weekend, food]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
