--- a/_posts/post/2017-01-11-javaRule.md
+++ b/_posts/post/2017-01-11-javaRule.md
@@ -9,6 +9,6 @@ tag:
 - 阿里巴巴
 comments: true
 ---
-### 阿里巴巴技术部Java代码规范
+### 阿里巴巴技术部Java代码规范（已更新至最新版）
 
 <object width="100%" height="600" data="{{ site.staticUrl }}/article/pdf/Java-new.pdf" type="application/pdf"> <param name="src" value="{{ site.staticUrl }}/article/pdf/Java-new.pdf"> </object>
