--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -8,3 +8,17 @@ feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: false
 ---
+
+## 个人信息
+* 徐轶／男／1988.12
+* 本科／生态学／中南林业科技大学
+* 18175154302／eddyxu1213@126.com
+* 参加工作年月：2012.07
+* 现居地：长沙
+* 博客地址：[http://justice-love.com/](http://justice-love.com/)
+* GitHub：[https://github.com/Justice-love](https://github.com/Justice-love)
+
+## 工作经历
+### 2012.07-2014.10／湖南步步高集团／java开发工程师
+* 负责公司电商系统java后台开发维护（自提点系统-类似菜鸟驿站, [http://ztd.bubugao.com](http://ztd.bubugao.com)）
+* 在步步高任职期间接触了hadoop, hbase，并自己出于兴趣对hbase的api进行了简单的封装
