--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -18,7 +18,35 @@ comments: false
 * 博客地址：[http://justice-love.com/](http://justice-love.com/)
 * GitHub：[https://github.com/Justice-love](https://github.com/Justice-love)
 
+## 自我评价
+* 肯花时间去琢磨一个未了解透彻的知识点。
+* 平常会看书并记录下思考结果。
+* 对netty的知识有所欠缺。
+* 事业和家庭对我来说是平衡的，如果一定要说，家庭会多占一些。
+* 可以通过我的博客来了解我（[http://justice-love.com/](http://justice-love.com/)）。
+
 ## 工作经历
+
 ### 2012.07-2014.10／湖南步步高集团／java开发工程师
+
 * 负责公司电商系统java后台开发维护（自提点系统-类似菜鸟驿站, [http://ztd.bubugao.com](http://ztd.bubugao.com)）
 * 在步步高任职期间接触了hadoop, hbase，并自己出于兴趣对hbase的api进行了简单的封装
+
+### 2014.11-2016.07／阿里巴巴集团 业务平台事业部(原共享事业部) 会员平台／资深开发工程师
+
+* 会员平台核身系统（敏感操作所必需进行的身份验证）的开发维护
+* 核身系统逐步取代安全部的二次验证，在淘宝网全网铺开。
+* 离开时初步制定核身系统上云方案。 
+
+### 2016.07- ～／湖南海翼集团／资深开发工程师
+* 负责后端接口的维护（响应耗时，调用记录等）
+* 大数据表分表工作（简单哈希 + 虚拟节点）
+* 权限系统，基于RBAC1
+
+## 项目
+
+### hbase api封装-个人项目
+* 项目地址：https://github.com/Justice-love/oceandata
+---
+* 利用当时学习的mybatis源码和Hbase基础知识，使用动态代理的方式对Hbase的api进行封装.
+* 简单利用java.util.LinkedHashMap removeEldestEntry实现了LRU缓存
