--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -45,8 +45,16 @@ comments: false
 
 ## 项目
 
-### hbase api封装-个人项目
+### 2015.06-2015.07／hbase api封装-个人项目
 * 项目地址：https://github.com/Justice-love/oceandata
 ---
 * 利用当时学习的mybatis源码和Hbase基础知识，使用动态代理的方式对Hbase的api进行封装.
 * 简单利用java.util.LinkedHashMap removeEldestEntry实现了LRU缓存
+
+### 2017.01-2017.02／stockAnalysis-个人项目
+* 项目地址：https://github.com/Justice-love/stockAnalysis
+---
+* 数据抓取-支持jsoup和httpClient两种抓取方式，抓取地址／转换逻辑等信息通过xml配置。
+* 数据聚合-抓取数据入库，历史数据聚合。
+* 分析过滤-可实时通过groovy增加分析算子；通过配置对分析算子串联成链式结构来对数据进行流式分析。
+* 结果通知-目前仅支持邮件通知，后期准备接入smartQQ做IM通知。
