--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -6,7 +6,7 @@ excerpt: "我的简历"
 tags: [简历, resume]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
-comments: false
+comments: true
 ---
 
 ## 个人信息
