--- a/_posts/post/2017-02-15-git.md
+++ b/_posts/post/2017-02-15-git.md
@@ -15,7 +15,7 @@ comments: true
 
 * 使用命令 ```ssh-keygen -t rsa -C "mine@email.com"```
   * 为的个用户新建SSH-Key直接全部回车即可（默认存储文件）
-  * 第二个用户的SSH-Key与第一个用户基本相同，但注意需指定存储文件，如：Enter file in which to save the key (/c/Users/Administrator/.ssh/id_rsa): id_rsa_work
+  * 第二个用户的SSH-Key与第一个用户基本相同，但注意需指定存储文件，如：Enter file in which to save the key (/c/Users/Administrator/.ssh/id_rsa): id_rsa_mine
 
 * 生成后的文件结构基本如下：
 
