--- a/_posts/life/2017-02-20-lyric.md
+++ b/_posts/life/2017-02-20-lyric.md
@@ -10,59 +10,59 @@ comments: false
 ---
 
 ### 只要有你-歌词
-```
-（那英）：谁能告诉我有没有这样的笔
-能画出一双双不流泪的眼睛
-留得住世上一纵即逝的光阴
-能让所有美丽从此也不再凋零
-```
-```
-（孙楠）：如果是这样我可以安慰自己
-在没有你的夜里能划出一线光明
-留得住快乐全部都送去给你
-苦涩的味道变了甜蜜
-```
-```
-（那英）：从此也不用分开相爱的天和地
-还能在冬雨天空月亮太阳再相遇
-```
-```
-（合）：生命中只要有你什么都变了可以
-让所有流星随时都相遇
-```
-```
-（孙楠）：从此在人世上也没有无奈的分离
-我不用睁着眼睛看你远走的背影
-```
-```
-（合）：没有变坏的清纯没有失落的爱情
-所有承诺永恒得像星星
-```
-```
-（那英）：谁能告诉我有没有这样的笔
-能画出一双双不流泪的眼睛
-留得住世上一纵即逝的光阴
-能让所有美丽从此也不再凋零
-```
-```
-（孙楠）：如果是这样我可以安慰自己
-在没有你的夜里能划出一线光明
-留得住快乐全部都送去给你
-苦涩的味道变了甜蜜
-```
-```
-（那英）：从此也不用分开相爱的天和地
-还能在冬雨天空月亮太阳再相遇
-```
-```
-（合）：生命中只要有你什么都变了可以
-让所有流星随时都相遇
-```
-```
-（孙楠）：从此在人世上也没有无奈的分离
-我不用睁着眼睛看你远走的背影
-```
-```
-（合）：没有变坏的清纯没有失落的爱情
-所有承诺永恒得像星星
-```
+
+（那英）：谁能告诉我有没有这样的笔<br/>
+能画出一双双不流泪的眼睛<br/>
+留得住世上一纵即逝的光阴<br/>
+能让所有美丽从此也不再凋零<br/>
+{: .notice}
+
+（孙楠）：如果是这样我可以安慰自己<br/>
+在没有你的夜里能划出一线光明<br/>
+留得住快乐全部都送去给你<br/>
+苦涩的味道变了甜蜜<br/>
+{: .notice}
+
+（那英）：从此也不用分开相爱的天和地<br/>
+还能在冬雨天空月亮太阳再相遇<br/>
+{: .notice}
+
+（合）：生命中只要有你什么都变了可以<br/>
+让所有流星随时都相遇<br/>
+{: .notice}
+
+（孙楠）：从此在人世上也没有无奈的分离<br/>
+我不用睁着眼睛看你远走的背影<br/>
+{: .notice}
+
+（合）：没有变坏的清纯没有失落的爱情<br/>
+所有承诺永恒得像星星<br/>
+{: .notice}
+
+（那英）：谁能告诉我有没有这样的笔<br/>
+能画出一双双不流泪的眼睛<br/>
+留得住世上一纵即逝的光阴<br/>
+能让所有美丽从此也不再凋零<br/>
+{: .notice}
+
+（孙楠）：如果是这样我可以安慰自己<br/>
+在没有你的夜里能划出一线光明<br/>
+留得住快乐全部都送去给你<br/>
+苦涩的味道变了甜蜜<br/>
+{: .notice}
+
+（那英）：从此也不用分开相爱的天和地<br/>
+还能在冬雨天空月亮太阳再相遇<br/>
+{: .notice}
+
+（合）：生命中只要有你什么都变了可以<br/>
+让所有流星随时都相遇<br/>
+{: .notice}
+
+（孙楠）：从此在人世上也没有无奈的分离<br/>
+我不用睁着眼睛看你远走的背影<br/>
+{: .notice}
+
+（合）：没有变坏的清纯没有失落的爱情<br/>
+所有承诺永恒得像星星<br/>
+{: .notice}
