--- a/_posts/life/2017-02-20-lyric.md
+++ b/_posts/life/2017-02-20-lyric.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: "孙楠-只要有你"
+title: "只要有你"
 date: 2017-02-20
-excerpt: "歌词-只要有你"
+excerpt: "只要有你，天会更蓝;只要有你，地会更绿;只要有你，水会更清;只要有你，月会更圆;只要有你，花会更香;只要有你，笑会更甜;只要有你，一切都会变的更好;只要有你，一切都会做的圆满;只要有你，一切都会光辉灿烂!"
 tags: [歌词, 只要有你]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
