--- a/_posts/life/2017-02-20-lyric.md
+++ b/_posts/life/2017-02-20-lyric.md
@@ -2,7 +2,7 @@
 layout: post
 title: "只要有你"
 date: 2017-02-20
-excerpt: "只要有你，天会更蓝;只要有你，地会更绿;只要有你，水会更清;只要有你，月会更圆;只要有你，花会更香;只要有你，笑会更甜;只要有你，一切都会变的更好;只要有你，一切都会做的圆满;只要有你，一切都会光辉灿烂!"
+excerpt: "只要有你，天更蓝；只要有你，水更清；只要有你，空气更加清新；因为只有你，一切才会如此美好！"
 tags: [歌词, 只要有你]
 feature: http://i.imgur.com/Ds6S7lJ.png
 life: true
