--- a/_posts/life/2017-02-20-lyric.md
+++ b/_posts/life/2017-02-20-lyric.md
@@ -9,7 +9,9 @@ life: true
 comments: false
 ---
 
-### 只要有你-歌词
+### 只要有你
+
+> 只要有你，天更蓝；只要有你，水更清；只要有你，空气更加清新；因为只有你，一切才会如此美好！
 
 （那英）：谁能告诉我有没有这样的笔<br/>
 能画出一双双不流泪的眼睛<br/>
