--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -5,8 +5,8 @@ date: 2017-02-14
 excerpt: "我的简历"
 tags: [简历, resume]
 feature: http://i.imgur.com/Ds6S7lJ.png
-life: true
-comments: true
+project: true
+comments: false
 ---
 
 ## 个人信息
