--- a/_posts/post/2017-02-22-http.md
+++ b/_posts/post/2017-02-22-http.md
@@ -9,4 +9,11 @@ tag:
 comments: true
 ---
 
+> 我所理解的http流程，从chrome network timing来分析从客户端 - 服务端 - 客户端的完整链条。
 
+## Chrome Network Timing截图
+![http](http://ojt8gkzcy.bkt.clouddn.com/image/png/timing.png)
+
+## DNS Lookup阶段
+
+这个很好理解，就是查找DNS所花费的时间。
