--- a/_posts/post/2017-02-22-http.md
+++ b/_posts/post/2017-02-22-http.md
@@ -9,7 +9,7 @@ tag:
 comments: true
 ---
 
-> 我所理解的http流程，从chrome network timing来分析从客户端 - 服务端 - 客户端的完整链条。
+> 这是我所理解的http流程，从chrome network timing来分析从客户端 - 服务端 - 客户端的完整链条。
 
 ## Chrome Network Timing截图
 ![http]({{ site.staticUrl }}/image/png/timing.png)
