--- a/_posts/post/2017-02-22-http.md
+++ b/_posts/post/2017-02-22-http.md
@@ -34,11 +34,11 @@ request包括
 * 请求URL path
 * 请求头（User-Agent，Host等）
 
-## Waiting (TTFB)
+## Waiting (TTFB)阶段
 
 客户端等待服务端处理，相应时间，如果配置了Socket read timeout， 则要注意这个时间段的长度。
 
-## Content Download
+## Content Download阶段
 
 服务端返回response，服务端解析并下载response body的时间。
 
