--- a/_posts/post/2017-02-22-http.md
+++ b/_posts/post/2017-02-22-http.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "我理解的Http完整流程"
+title:  "理解Http完整流程"
 date:   2017-02-22
 excerpt: "从chrome network timing解析Http完整流程"
 tag:
