--- a/_posts/post/2017-02-26-Generic.md
+++ b/_posts/post/2017-02-26-Generic.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Java泛型中的协变与逆变"
 date:   2017-02-26
-excerpt: "什么是协变/逆变以及在泛型中协变逆变的作用"
+excerpt: "介绍什么是协变/逆变以及在泛型中协变逆变的作用"
 tag:
 - Java
 - Generic
@@ -12,7 +12,7 @@ comments: true
 > 描述一下什么是协变/逆变以及在泛型中协变逆变的运用。
 
 ## 协变/逆变
-协变/逆变是集合间的一种关系，是由类与类之间关系扩展的一种关系。类与类之间存在继承，如A继承B，则可以认为A的范围小于B，即A<=B。而集合是一种数据结构，集合中的元素是有类组成的，由两个拥有继承关系的类分别组成的集合他们之间的关系必然受到组成集合元素的类的影响。
+协变/逆变是集合间的一种关系，是由类与类之间关系扩展的一种关系。类与类之间存在继承，如A继承B，则可以认为A的范围小于B，即A<=B。<br/>而集合是一种数据结构，集合中的元素是有类组成的，由两个拥有继承关系的类分别组成的集合他们之间的关系必然受到组成集合元素的类的影响。
 
 当类A与类B间存在<br/>
 A <= B 时<br/>
@@ -23,3 +23,33 @@ Collection（A） >=  Collection（B） 则叫做是逆变的关系<br/>
 即：和类与类间的关系保持一致，则称作协变（协同），如果相反，则称作逆变<br/>
 {: .notice}
 
+## 泛型中的逆变/协变
+在Java中泛型所指代的类型是不可变的，即List<String> 不能一会指代String类型，一会又指代其他类型，必须是明确的类型。
+
+但是在泛型中， 我们可以使用List<? extends A> 和  List<? super A> 来做到泛型的扩展
+
+类与类之间的关系：
+{% highlight java %}
+{% raw %}
+public class B {
+}
+
+public class A extends B {
+}
+{% endraw %}
+{% endhighlight %}
+
+### List<? extends A> 协变
+__List集合中的元素类型必须是A的子类，即集合与集合之间是协变的关系__
+{% highlight java %}
+{% raw %}
+    @Test
+    public void test() {
+        List<? extends B> list = new ArrayList<>();
+        A a = new A();
+        B b = new B();
+        list.add(a);//编译错误
+        list.add(b);//编译错误
+    }
+{% endraw %}
+{% endhighlight %}
