--- a/_posts/post/2017-02-26-Generic.md
+++ b/_posts/post/2017-02-26-Generic.md
@@ -31,11 +31,18 @@ Collection（A） >=  Collection（B） 则叫做是逆变的关系<br/>
 类与类之间的关系：
 {% highlight java %}
 {% raw %}
+/**
+ * 父类
+ * Created by 轶 on 2017/2/26.
+ */
 public class B {
 }
 
-public class A extends B {
-}
+/**
+ * 子类
+ * Created by 轶 on 2017/2/26.
+ */
+ 
 {% endraw %}
 {% endhighlight %}
 
