--- a/_posts/post/2017-02-26-Generic.md
+++ b/_posts/post/2017-02-26-Generic.md
@@ -33,14 +33,14 @@ Collection（A） >=  Collection（B） 则叫做是逆变的关系<br/>
 {% raw %}
 /**
  * 父类
- * Created by 轶 on 2017/2/26.
+ * Created by Justice-love on 2017/2/26.
  */
 public class B {
 }
 
 /**
  * 子类
- * Created by 轶 on 2017/2/26.
+ * Created by Justice-love on 2017/2/26.
  */
  
 {% endraw %}
