--- a/_posts/post/2017-02-26-Generic.md
+++ b/_posts/post/2017-02-26-Generic.md
@@ -42,7 +42,8 @@ public class B {
  * 子类
  * Created by Justice-love on 2017/2/26.
  */
- 
+public class A extends B {
+}
 {% endraw %}
 {% endhighlight %}
 
