--- a/_posts/post/2017-02-26-Generic.md
+++ b/_posts/post/2017-02-26-Generic.md
@@ -12,14 +12,14 @@ comments: true
 > 描述一下什么是协变/逆变以及在泛型中协变逆变的运用。
 
 ## 协变/逆变
-协变/逆变是集合间的一种关系，是由类与类之间关系扩展的一种关系。类与类之间存在继承，如A继承B，则可以认为A的范围小于B，即A<=B。<br/>而集合是一种数据结构，集合中的元素是有类组成的，由两个拥有继承关系的类分别组成的集合他们之间的关系必然受到组成集合元素的类的影响。
+协变/逆变是集合间的一种关系，是由类与类之间关系扩展的一种关系。类与类之间存在继承，如A继承B，则可以认为A的范围小于B，即A ⊆ B。<br/>而集合是一种数据结构，集合中的元素是有类组成的，由两个拥有继承关系的类分别组成的集合他们之间的关系必然受到组成集合元素的类的影响。
 
 当类A与类B间存在<br/>
-A <= B 时<br/>
+A ⊆ B 时<br/>
 如果集合Collection（A）与Collection（B）存在<br/>
-Collection（A） <=  Collection（B） 则叫做是协变的关系<br/>
+Collection（A） ⊆  Collection（B） 则叫做是协变的关系<br/>
 如果集合Collection（A）与Collection（B）存在<br/>
-Collection（A） >=  Collection（B） 则叫做是逆变的关系<br/>
+Collection（A） ⊇  Collection（B） 则叫做是逆变的关系<br/>
 即：和类与类间的关系保持一致，则称作协变（协同），如果相反，则称作逆变<br/>
 {: .notice}
 
