--- a/_posts/post/2017-02-28-cache.md
+++ b/_posts/post/2017-02-28-cache.md
@@ -2,20 +2,26 @@
 layout: post
 title:  "缓存"
 date:   2017-02-28
-excerpt: "我所理解的集中不同的缓存实现方式"
+excerpt: "我所理解的几种不同的缓存实现方式"
 tag:
 - Java
 - Cache
 comments: true
 ---
 
-> 记录一下我所了解的集中缓存机制
+> 记录一下我所了解的几种缓存机制
 
 # 缓存
 缓存是一种存储在内存中，可以快速定位查找数据的数据结构，并且一个缓存算法是包含了冷数据淘汰的机制的。
 
 ## LRU
-LRU-Least Recently Used 的缩写，即近期最少使用算法，系统可以将保存时间最长的数据从缓存中剔除出去。在Java中，从1.4开始提供了```java.util.LinkedHashMap```类来帮助我们简单的实现LRU缓存算法。我们要做的仅是继承这个类并覆盖removeEldestEntry方法，JDK会在向该Map中put数据时会调用该方法，如果返回true，则会将存在时间最长的数据剔除。下面是一个利用```java.util.LinkedHashMap```LRU的简单实现（只是移除保留时间最长的节点，并非使用次数最少的）
+LRU-Least Recently Used 的缩写，即近期最少使用算法，系统可以将保存时间最长的数据从缓存中剔除出去。<br/>在Java中，从1.4开始提供了```java.util.LinkedHashMap```类来帮助我们简单的实现LRU缓存算法。
+* 继承```java.util.LinkedHashMap```
+* 覆盖```java.util.LinkedHashMap```的removeEldestEntry方法
+    * JDK会在向该Map中put数据时会调用该方法
+    * 如果返回true，则会将存在时间最长的数据剔除
+    
+***下面是一个利用```java.util.LinkedHashMap```LRU的简单实现（只是移除保留时间最长的节点，并非使用次数最少的）***
 {% highlight java %}
 {% raw %}
 
@@ -82,7 +88,12 @@ public class MyLRU extends LinkedHashMap{
 * 数据的读取将会导致缓存数据的重排，这个重排操作需要同步，势必会导致部分性能瓶颈。
 
 ## 软引用
-Java中的软引用也经常被用在缓存的实现上。软引用属于Java中四种引用方式中的一种，不同于我们平常使用的强引用，软引用并非只在对象未被根搜索算法查找到时才可能被回收，而是在内存空间不足时，同样会回收这些对象，这时软引用的特性（除了强引用，软引用，还有弱引用，虚引用，但这两种很少用到）。依照这种特性，如果使用软引用来存储缓存数据，则缓存数据会被保存至内存将要溢出时。以下是我使用软引用实现的缓存结构。
+__Java中的软引用也经常被用在缓存的实现上。__
+
+软引用属于Java中四种引用方式中的一种，不同于我们平常使用的强引用，软引用并非只在对象未被根搜索算法查找到时才可能被回收，而是在内存空间不足时，同样会回收这些对象，这是软引用的特性（除了强引用，软引用，还有弱引用，虚引用，但这两种很少用到）。
+* 依照这种特性，如果使用软引用来存储缓存数据，则缓存数据会被保存至内存将要溢出时。
+
+***以下是我使用软引用实现的缓存结构。***
 {% highlight java %}
 {% raw %}
 
@@ -110,7 +121,12 @@ public class SoftCache<K, V> extends HashMap<K, SoftReference<V>> {
 * 数据的清理是不可控的，可能会热点数据的全部失效，瞬时增加下游服务的压力。
 
 ## Oracle缓存算法
-Oracle申请的专利缓存算法，数据存储使用HashMap或其他简单的Map即可，缓存的数据可以定义好他的生命周期，如数据使用次数为10次等。数据是否进入缓存是依赖一个函数f（），函数的返回值是true或者false，当结果为true时，则将数据put进缓存。该种缓存算法的命中率极高，原因在于热点数据的get次数远远大于冷数据，即虽然f（）相同，但热点数据更多的读取次数保证了数据在缓存中保持的时间更长。以下是我的简单实现。
+Oracle申请的专利缓存算法，数据存储使用HashMap或其他简单的Map即可，缓存的数据可以定义好他的生命周期，如数据使用次数为10次等。<br/>数据是否进入缓存是依赖一个函数f（），函数的返回值是true或者false，当结果为true时，则将数据put进缓存。<br/>
+
+---------------------------------
+**该种缓存算法的命中率极高**，原因在于热点数据的get次数远远大于冷数据，即虽然f（）相同，但热点数据更多的读取次数保证了数据在缓存中保持的时间更长。
+
+***以下是我的简单实现。***
 {% highlight java %}
 {% raw %}
 
