--- a/_posts/post/2017-02-28-cache.md
+++ b/_posts/post/2017-02-28-cache.md
@@ -126,7 +126,7 @@ Oracle申请的专利缓存算法，数据存储使用HashMap或其他简单的M
 ---------------------------------
 **该种缓存算法的命中率极高**，原因在于热点数据的get次数远远大于冷数据，即虽然f（）相同，但热点数据更多的读取次数保证了数据在缓存中保持的时间更长。
 
-***以下是我的简单实现。***
+***以下是我的简单实现（未实现数据的移除）。***
 {% highlight java %}
 {% raw %}
 
