--- a/_posts/post/2017-02-28-cache.md
+++ b/_posts/post/2017-02-28-cache.md
@@ -143,7 +143,7 @@ public class OracleCache<K, V> {
         }
         V v = new Real<V>().create();
         putToCache(key, v);
-        return null;
+        return v;
     }
 
     private void putToCache(K key, V v) {
