--- a/_posts/post/2017-02-28-cache.md
+++ b/_posts/post/2017-02-28-cache.md
@@ -15,7 +15,7 @@ comments: true
 缓存是一种存储在内存中，可以快速定位查找数据的数据结构，并且一个缓存算法是包含了冷数据淘汰的机制的。
 
 ## LRU
-LRU-Least Recently Used 的缩写，即近期最少使用算法，系统可以将保存时间最长的数据从缓存中剔除出去。<br/>在Java中，从1.4开始提供了```java.util.LinkedHashMap```类来帮助我们简单的实现LRU缓存算法。
+LRU-Least Recently Used 的缩写，即近期最少使用算法，一般会使用 __双向链表__ 按照访问顺序对缓存数据进行排序，当满足一定条件后可以将链表中最少使用的数据从缓存中剔除出去。<br/>在Java中，从1.4开始提供了```java.util.LinkedHashMap```类来帮助我们简单的实现LRU缓存算法。
 * 继承```java.util.LinkedHashMap```
 * 通过构造函数定义```java.util.LinkedHashMap#accessOrder```为true，即链表排列顺序为访问顺序（默认为false，即插入顺序）
 * 覆盖```java.util.LinkedHashMap```的removeEldestEntry方法
