--- a/_posts/post/2017-03-07-debug.md
+++ b/_posts/post/2017-03-07-debug.md
@@ -24,7 +24,7 @@ java -server -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socke
 ```
 
 ## 参数解释
-**-server：** 虚拟机的一种启动模式，想比如client模式，具有更高的性能，但是启动速度不如client模式。
-**-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8899：** 以debug模式启动虚拟机，server模式启动，如果suspend=y，则应用不会启动直到有一个远程debug连接连接到指定的端口8899。
+**-server：** 虚拟机的一种启动模式，想比如client模式，具有更高的性能，但是启动速度不如client模式。<br/>
+**-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8899：** 以debug模式启动虚拟机，server模式启动，如果suspend=y，则应用不会启动直到有一个远程debug连接连接到指定的端口8899。<br/>
 **-Djava.compiler=NONE：** 禁止JIT，因为JIT是以class的所有字节码为对象的，而我们debug一般只需要执行其中的一段逻辑即可，所以一般我们都会禁止他。
 
