--- a/_posts/post/2017-03-07-debug.md
+++ b/_posts/post/2017-03-07-debug.md
@@ -25,6 +25,12 @@ java -server -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socke
 
 ## 参数解释
 **-server：** 虚拟机的一种启动模式，想比如client模式，具有更高的性能，但是启动速度不如client模式。<br/>
-**-Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8899：** 以debug模式启动虚拟机，server模式启动，如果suspend=y，则应用不会启动直到有一个远程debug连接连接到指定的端口8899。<br/>
-**-Djava.compiler=NONE：** 禁止JIT，因为JIT是以class的所有字节码为对象的，而我们debug一般只需要执行其中的一段逻辑即可，所以一般我们都会禁止他。
-
+**-Xdebug：**  启用调试。<br/>
+**-Xnoagent：** 禁用默认sun.tools.debug调试器。<br/>
+**-Djava.compiler=NONE：** 禁止JIT，因为JIT是以class的所有字节码为对象的，而我们debug一般只需要执行其中的一段逻辑即可，所以一般我们都会禁止他。<br/>
+**-Xrunjdwp：** 加载JDWP的JPDA参考执行实例。<br/>
+**transport：** 定义远程VM和本地项目之间的通讯方式。<br/>
+**dt_socket：** 套接字传输。<br/>
+**server=y/n：** 远程VM是否需要作为调试服务器执行。<br/>
+**suspend=y/n：** 如果suspend=y，则远程VM不会启动直到有一个远程debug连接到VM上。<br/>
+**address=${port}：** 远程VM提供的调试连接端口号，客户端用来连接远程VM。<br/>
