--- a/_posts/post/2017-03-07-debug.md
+++ b/_posts/post/2017-03-07-debug.md
@@ -34,3 +34,6 @@ java -server -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socke
 **server=y/n：** 远程VM是否需要作为调试服务器执行。<br/>
 **suspend=y/n：** 如果suspend=y，则远程VM不会启动直到有一个远程debug连接到VM上。<br/>
 **address=${port}：** 远程VM提供的调试连接端口号，客户端用来连接远程VM。<br/>
+
+## 其他
+如果是使用tomcat容器，可以直接使用jpda start方式启动远程debug。
