--- a/_posts/post/2017-03-07-debug.md
+++ b/_posts/post/2017-03-07-debug.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "远程Debug SpringBoot应用"
+title:  "如何开启SpringBoot远程Debug功能"
 date:   2017-03-07
 excerpt: "SpringBoot如何开启远程Debug以及参数的简单说明"
 tag:
