--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -5,7 +5,7 @@ date: 2017-02-14
 excerpt: "我的简历"
 tags: [简历, resume]
 feature: http://i.imgur.com/Ds6S7lJ.png
-project: true
+life: true
 comments: false
 ---
 
