--- a/_posts/post/2017-03-07-debug.md
+++ b/_posts/post/2017-03-07-debug.md
@@ -15,11 +15,11 @@ comments: true
 ## SpringBoot开启远程Debug方式
 
 运行指令：
-```
+``` shell
 java -server -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8899  -jar xxxx-1.0-SNAPSHOT.jar
 ```
 主要虚拟机参数：
-```
+``` shell
 -server -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8899
 ```
 
