--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -27,10 +27,13 @@ comments: false
 
 ## 工作经历
 
-### 2012.07-2014.10／湖南步步高集团／java开发工程师
+### 2012.07-2014.4／湖南步步高集团／java开发工程师
 
 * 负责公司电商系统java后台开发维护（自提点系统-类似菜鸟驿站, [http://ztd.bubugao.com](http://ztd.bubugao.com)）
-* 在步步高任职期间接触了hadoop, hbase，并自己出于兴趣对hbase的api进行了简单的封装
+
+### 2014.4-2014.11／长沙游龙网络／java开发工程师
+
+* 任职期间接触了hadoop, hbase，并自己出于兴趣对hbase的api进行了简单的封装
 
 ### 2014.11-2016.07／阿里巴巴集团 业务平台事业部(原共享事业部) 会员平台／资深开发工程师
 
