--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -27,13 +27,11 @@ comments: false
 
 ## 工作经历
 
-### 2012.07-2014.4／湖南步步高集团／java开发工程师
+### 2012.07-2014.11
 
-* 负责公司电商系统java后台开发维护（自提点系统-类似菜鸟驿站, [http://ztd.bubugao.com](http://ztd.bubugao.com)）
-
-### 2014.4-2014.11／长沙游龙网络／java开发工程师
-
-* 任职期间接触了hadoop, hbase，并自己出于兴趣对hbase的api进行了简单的封装
+* 在这段时间比较躁动，在长沙换了两家公司，先后接触了互联网和大数据。
+* 在这段时间最大的成长是接触了业界比较常用的一些中间件产品，也出于兴趣，尝试着对Hbase Api进行了简单的封装并分享了出来。
+    * 地址：[https://github.com/Justice-love/oceandata](https://github.com/Justice-love/oceandata)
 
 ### 2014.11-2016.07／阿里巴巴集团 业务平台事业部(原共享事业部) 会员平台／资深开发工程师
 
