--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -37,7 +37,7 @@ comments: false
 
 * 会员平台核身系统（敏感操作所必需进行的身份验证）的开发维护
 * 核身系统逐步取代安全部的二次验证，在淘宝网全网铺开。
-* 离开时初步制定核身系统上云方案。 
+* 离开时初步参与核身系统上云方案。 
 
 ### 2016.07- ～／湖南海翼集团／资深开发工程师
 * 负责后端接口的维护（响应耗时，调用记录等）
