--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -57,3 +57,9 @@ comments: false
     * 数据聚合-抓取数据入库，历史数据聚合。
     * 分析过滤-可实时通过groovy增加分析算子；通过配置对分析算子串联成链式结构来对数据进行流式分析。
     * 结果通知-目前仅支持邮件通知，后期准备接入smartQQ做IM通知。
+        * 现已基于钉钉自定义机器人实现IM推送。
+        
+### 2017.03.12 - ～ /logAnalysis
+* __项目地址：[https://github.com/justice-code/logAnalysis](https://github.com/justice-code/logAnalysis)__
+    * 日志采集/在线实时分析
+    * 刚起步，待完善
