--- a/_posts/post/2016-11-04-mysql.md
+++ b/_posts/post/2016-11-04-mysql.md
@@ -4,7 +4,7 @@ title:  "mysql散列算法"
 date:   2016-11-04
 excerpt: "mysql数据库实现BKDR散列算法(java字符串采用该散列算法)"
 tag:
-- mydql
+- mysql
 - hash
 comments: true
 ---
