--- a/_posts/life/2017-02-20-lyric.md
+++ b/_posts/life/2017-02-20-lyric.md
@@ -12,7 +12,7 @@ comments: false
 > 只要有你，天更蓝；只要有你，水更清；只要有你，空气更加清新；因为只有你，一切才会如此美好！
 
 <figure>
-	<a href="{{ site.staticUrl }}/image/jpg/heart.jpg"><img src="{{ site.url }}/assets/img/heart.jpg" /></a>
+	<a href="{{ site.staticUrl }}/image/jpg/heart.jpg"><img src="{{ site.staticUrl }}/image/jpg/heart.jpg" /></a>
 </figure>
 
 （那英）：谁能告诉我有没有这样的笔<br/>
