--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -59,7 +59,8 @@ comments: false
     * 结果通知-目前仅支持邮件通知，后期准备接入smartQQ做IM通知。
         * 现已基于钉钉自定义机器人实现IM推送。
         
-### 2017.03.12 - ～ /logAnalysis
-* __项目地址：[https://github.com/justice-code/logAnalysis](https://github.com/justice-code/logAnalysis)__
-    * 日志采集/在线实时分析
-    * 刚起步，待完善
+### 2017.03.16 - 2017.06 /QiuQiu
+* __项目地址：[https://github.com/justice-code/QiuQiu](https://github.com/justice-code/QiuQiu)__
+    * 一款基于Mybatis的数据库分库分表插件
+    * 支持自定义规则配置／自定义拦截配置
+    * 路由规则支持自定义groovy表达式
