--- a/_posts/life/2016-11-09-vote.md
+++ b/_posts/life/2016-11-09-vote.md
@@ -4,7 +4,7 @@ title: "vote"
 date: 2016-11-09
 excerpt: "美国大选"
 tags: [US, vote]
-feature: http://i.imgur.com/Ds6S7lJ.png
+feature: //i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
