--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -4,7 +4,7 @@ title: "简历"
 date: 2017-02-14
 excerpt: "我的简历"
 tags: [简历, resume]
-feature: http://i.imgur.com/Ds6S7lJ.png
+feature: //i.imgur.com/Ds6S7lJ.png
 project: true
 comments: false
 ---
