--- a/_posts/life/2017-01-26-newyear.md
+++ b/_posts/life/2017-01-26-newyear.md
@@ -4,7 +4,7 @@ title: "2017农历丁酉年！新年快乐！"
 date: 2017-01-26
 excerpt: "2017农历丁酉年！新年快乐！"
 tags: [happy new year]
-feature: http://i.imgur.com/Ds6S7lJ.png
+feature: //i.imgur.com/Ds6S7lJ.png
 life: true
 comments: false
 ---
