--- a/_posts/life/2017-06-14-marriage.md
+++ b/_posts/life/2017-06-14-marriage.md
@@ -4,7 +4,7 @@ title: "我们结婚啦"
 date: 2017-06-14
 excerpt: "我们结婚啦"
 tags: [结婚, marriage]
-feature: http://i.imgur.com/Ds6S7lJ.png
+feature: //i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
