--- a/_posts/life/2016-11-10-bike.md
+++ b/_posts/life/2016-11-10-bike.md
@@ -4,7 +4,7 @@ title: "骑车"
 date: 2016-11-10
 excerpt: "骑着我的小电动车撒欢"
 tags: [骑车]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
