--- a/_posts/life/2017-01-01-new-year.md
+++ b/_posts/life/2017-01-01-new-year.md
@@ -4,7 +4,7 @@ title: "元旦快乐"
 date: 2017-01-01
 excerpt: "2017元旦快乐！新年快乐！"
 tags: [newyear, 元旦快乐, 新年快乐]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: false
 ---
