--- a/_posts/life/2017-02-05-lunch.md
+++ b/_posts/life/2017-02-05-lunch.md
@@ -4,7 +4,7 @@ title: "美食频道"
 date: 2017-02-05
 excerpt: "自己做的午饭"
 tags: [weekend, food]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
