--- a/_posts/life/2016-11-05-exercise.md
+++ b/_posts/life/2016-11-05-exercise.md
@@ -4,7 +4,7 @@ title: "运动"
 date: 2016-11-06
 excerpt: "HIIT运动"
 tags: [life, exercise, 运动, HIIT]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: false
 ---
