--- a/_posts/life/2016-11-14-crawler.md
+++ b/_posts/life/2016-11-14-crawler.md
@@ -4,7 +4,7 @@ title: "证券分析"
 date: 2016-11-14
 excerpt: "证券分析"
 tags: [证券, 股票, 分析, 爬虫]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
