--- a/_posts/life/2016-12-22-food.md
+++ b/_posts/life/2016-12-22-food.md
@@ -4,7 +4,7 @@ title: "周末午餐"
 date: 2016-12-22
 excerpt: "自己在家做的周末午餐"
 tags: [weekend, food]
-feature: //i.imgur.com/Ds6S7lJ.png
+feature: https://i.imgur.com/Ds6S7lJ.png
 life: true
 comments: true
 ---
