--- a/_posts/life/2017-02-14-resume.md
+++ b/_posts/life/2017-02-14-resume.md
@@ -59,7 +59,7 @@ comments: false
     * 结果通知-目前仅支持邮件通知，后期准备接入smartQQ做IM通知。
         * 现已基于钉钉自定义机器人实现IM推送。
         
-### 2017.03.16 - 2017.06 /QiuQiu
+### 2017.03.16 - 2017.06 /QiuQiu-个人项目
 * __项目地址：[https://github.com/justice-code/QiuQiu](https://github.com/justice-code/QiuQiu)__
     * 一款基于Mybatis的数据库分库分表插件
     * 支持自定义规则配置／自定义拦截配置
