--- a/_posts/post/2017-05-20-nio.md
+++ b/_posts/post/2017-05-20-nio.md
@@ -33,7 +33,7 @@ __SelectionKey:__ 通道往选择器中注册成功之后返回的key
 ```SelectionKey#OP_CONNECT: ```标示通道已连接时。<br/>
 ```SelectionKey#OP_ACCEPT: ```标示通道已接受。<br/>
 
-## 案例
+## DEMO
 ### 客户端
 ``` java
 package org.eddy.io;
