--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -14,6 +14,10 @@ comments: true
 2. 使用python搭建简单的http服务
 3. 调用脚本重新部署jekyll博客
 
+* 配置webhook
+    * 在github项目设置页面新增webhook
+    * 最简单的webhook仅需配置回调url即可，我下面的例子中增加了安全性校验，你需要在配置webhook的时候设置一个安全密钥，GitHub会根据密钥和请求体使用hmac算法生成一串摘要，放到请求头里，供我们进行安全性校验
+
 * python服务脚本
 
 ``` python
