--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title:  "jekyll博客自动部署"
+title:  "Jekyll博客自动部署"
 date:   2017-08-18
-excerpt: "基于GitHub webhook实现jekyll博客自动部署"
+excerpt: "基于GitHub webhook实现Jekyll博客自动部署"
 tag:
 - GitHub
 - webhook
@@ -12,7 +12,7 @@ comments: true
 
 1. 配置GitHub webhook
 2. 使用python搭建简单的http服务
-3. 调用脚本重新部署jekyll博客
+3. 调用脚本重新部署Jekyll博客
 
 * 配置webhook
     * 在github项目设置页面新增webhook
@@ -87,19 +87,19 @@ comments: true
     GITHUB=github
     BRANCH=master
     TEMP_CLONE=path
-    JEKYLL=to_path
+    jekyll=to_path
     
     if [ -d $TEMP_CLONE ]
         then
           echo "git pull and jekyll rebuild"
           cd $TEMP_CLONE
           git pull
-          jekyll build -s $TEMP_CLONE -d $JEKYLL
+          jekyll build -s $TEMP_CLONE -d $jekyll
           exit
         else
           echo "git clone and jekyll rebuild"
           git clone $GITHUB -b $BRANCH $TEMP_CLONE
-          jekyll build -s $TEMP_CLONE -d $JEKYLL
+          jekyll build -s $TEMP_CLONE -d $jekyll
           exit
     fi
     ```
