--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -13,6 +13,7 @@ comments: true
 1. 配置GitHub webhook
 2. 使用python搭建简单的http服务
 3. 调用脚本重新部署Jekyll博客
+4. 配置python服务开机启动
 
 * 配置webhook
     * 在github项目设置页面新增webhook
@@ -103,4 +104,18 @@ comments: true
           jekyll build -s $TEMP_CLONE -d $jekyll
           exit
     fi
+    ```
+    
+* 配置python服务开机启动
+
+    ``` shell
+    [Unit]
+    Description=pythonServer
+    
+    [Service]
+    TimeoutStartSec=0
+    ExecStart=/usr/bin/python /opt/pages/www/script/server.py >> /opt/pages/www/scriptLog.log
+    
+    [Install]
+    WantedBy=multi-user.target
     ```
