--- a/_posts/post/2017-08-18-webhooks.md
+++ b/_posts/post/2017-08-18-webhooks.md
@@ -114,7 +114,7 @@ comments: true
     
     [Service]
     TimeoutStartSec=0
-    ExecStart=/usr/bin/python /opt/pages/www/script/server.py >> /opt/pages/www/scriptLog.log
+    ExecStart=/usr/bin/python /opt/pages/www/script/server.py
     
     [Install]
     WantedBy=multi-user.target
